add vido section

--- a/index.html
+++ b/index.html
@@ -295,7 +295,11 @@
 					<p>In our work we try to use only the most modern, convenient and interesting solutions.</p>
 				</div>
 				<div class="video-container">
-					<!-- Video iframe code here -->
+				<video width="1000" height="540" controls>
+					<source src="./video/video_bg.mp4" type="video/mp4">
+					<source src="./video/video_bg.ogv" type="video/ogv">
+					Your browser does not support the video tag.
+				</video>
 				</div>
 			</div>
 		</section>
